--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	},
 	"dependencies": {
 		"apollo-boost": "^0.4.7",
+		"axios": "^0.19.2",
 		"graphql": "^14.6.0",
 		"vue": "^2.6.11",
 		"vuex": "^3.1.3"
